# intelligent-sre-mcp

./: .dockerignore  Dockerfile  README.md  TESTING_GUIDE.md  cleanup.sh  deploy-phase3.sh  pyproject.toml  requirements.txt  restart-claude.sh  run_mcp.sh  run_mcp_api.sh  run_tests.sh  setup.sh  setup_claude.sh
infra/: docker-compose.yml
infra/alertmanager/: alertmanager.yml
infra/prometheus/: alert_rules.yml  prometheus.yml
k8s/: README.md  alert_rules.yaml  alertmanager.yaml  configmaps.yaml  demo-metrics.yaml  grafana.yaml  intelligent-sre-mcp.yaml  jaeger.yaml  kube-state-metrics.yaml  kustomization.yaml  namespace.yaml  node-exporter.yaml  otel-collector.yaml  postgres-pv.yaml  postgres.yaml  prometheus.yaml  rbac.yaml
setup/: quickstart.sh  restart-claude.sh  run_mcp_api.sh  setup.sh  setup_claude.sh
src/intelligent_sre_mcp/: api_client.py  api_server.py  config.py  server.py
src/intelligent_sre_mcp/tools/: action_learning.py  anomaly_detection.py  correlation.py  healing_actions.py  k8s_tools.py  metrics.py  pattern_recognition.py
tests/: README.md  run-all-tests.sh  test-e2e-full-automation.sh  test-e2e-with-claude.sh  test-healing-scenarios.sh  test-phase5.sh  test-scenarios.sh  test_detection.py  test_healing_actions.py
tests/docs/: .test-summary.txt  E2E_QUICKREF.txt  E2E_TEST_GUIDE.md  README.md  TESTING.md  TESTING_QUICKREF.md
