[project]
name = "intelligent-sre-mcp"
version = "0.1.0"
description = "MCP server for intelligent SRE operations (local Prometheus/Alertmanager/OTel)"
requires-python = ">=3.10"
dependencies = [
  "mcp",
  "httpx",
  "pydantic",
  "python-dotenv",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
